--- a/Blog-master/blog/templates/blog/base.html
+++ b/Blog-master/blog/templates/blog/base.html
@@ -37,6 +37,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="#">Credits (150)</a>
                 <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -49,6 +50,7 @@
         </div>
       </nav>
     </header>
+
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
