--- a/Blog-master/blog/templates/blog/base.html
+++ b/Blog-master/blog/templates/blog/base.html
@@ -15,12 +15,15 @@
 
     <script src="https://js.stripe.com/v3/"></script>
 
+    {% block style %} {% endblock style %}
+
     {% if title %}
         <title>Django Blog - {{ title }}</title>
     {% else %}
         <title>Django Blog</title>
     {% endif %}
 </head>
+
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
@@ -35,9 +38,11 @@
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
+
             <div class="navbar-nav">
+
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="#">Credits (150)</a>
+                <a class="nav-item nav-link active"> Credits ({{cred}})</a>
                 <a class="nav-item nav-link" href="{% url 'post_create' %}">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -46,6 +51,7 @@
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               {% endif %}
             </div>
+
           </div>
         </div>
       </nav>
