--- a/Blog-master/blog/templates/blog/post_form.html
+++ b/Blog-master/blog/templates/blog/post_form.html
@@ -39,7 +39,19 @@
 </style>
 
 
+     <div class="col-md-8">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        </div>
+
+
     <div class="content-section">
+
         <form method="POST" id="payment-form">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -47,114 +59,19 @@
                 {{ form|crispy }}
             </fieldset>
 
-            <fieldset class="form-group">
-            <select required name="amount" id="amount">
-              <option selected value="5">$5---here's a coffee ,on me :)</option>
-              <option value="10">$10---here's a coffee ,on me :)</option>
-              <option  value=15">$15---here's a coffee ,on me :)</option>
-
-            </select>
-            </fieldset>
-
-
-            <input required type="text" name="email" placeholder="Email">
-            <input required type="text" name="nickname" placeholder="nickname">
-
-
-              <label for="card-element"><br>
-              Credit or debit card
+            <div>
+              <label><br>
+                Your Credit is : {{cred}}
               </label>
-              <div id="card-element">
-              <!-- A Stripe Element will be inserted here. -->
-              </div>
-
-              <!-- Used to display form errors. -->
-              <div id="card-errors" role="alert"></div>
-
+            </div>
 
             <div class="form-group">
 <!--                <input  class="myButton" style="background-color:#10a195" type="submit" value="Submit Payment" name="">-->
-                <button class="btn btn-outline-info" value="Submit Payment" type="submit">Post</button>
+                <button class="btn btn-outline-info" type="submit">Post</button>
             </div>
 
         </form>
+
     </div>
-
-
-<script>
-
-    // Create a Stripe client.
-var stripe = Stripe('PUT your public key');
-
-// Create an instance of Elements.
-var elements = stripe.elements();
-
-// Custom styling can be passed to options when creating an Element.
-// (Note that this demo uses a wider set of styles than the guide below.)
-var style = {
-  base: {
-    color: '#32325d',
-    fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-    fontSmoothing: 'antialiased',
-    fontSize: '16px',
-    '::placeholder': {
-      color: '#aab7c4'
-    }
-  },
-  invalid: {
-    color: '#fa755a',
-    iconColor: '#fa755a'
-  }
-};
-
-// Create an instance of the card Element.
-var card = elements.create('card', {style: style});
-
-// Add an instance of the card Element into the `card-element` <div>.
-card.mount('#card-element');
-
-// Handle real-time validation errors from the card Element.
-card.on('change', function(event) {
-  var displayError = document.getElementById('card-errors');
-  if (event.error) {
-    displayError.textContent = event.error.message;
-  } else {
-    displayError.textContent = '';
-  }
-});
-
-// Handle form submission.
-var form = document.getElementById('payment-form');
-form.addEventListener('submit', function(event) {
-  event.preventDefault();
-
-  stripe.createToken(card).then(function(result) {
-    if (result.error) {
-      // Inform the user if there was an error.
-      var errorElement = document.getElementById('card-errors');
-      errorElement.textContent = result.error.message;
-    } else {
-      // Send the token to your server.
-      stripeTokenHandler(result.token);
-    }
-  });
-});
-
-// Submit the form with the token ID.
-function stripeTokenHandler(token) {
-  // Insert the token ID into the form so it gets submitted to the server
-  var form = document.getElementById('payment-form');
-  var hiddenInput = document.createElement('input');
-  hiddenInput.setAttribute('type', 'hidden');
-  hiddenInput.setAttribute('name', 'stripeToken');
-  hiddenInput.setAttribute('value', token.id);
-  form.appendChild(hiddenInput);
-
-  // Submit the form
-  form.submit();
-}
-  </script>
-
-
 
 {% endblock content %}
