--- a/Blog-master/blog/templates/creditTemp/silver.html
+++ b/Blog-master/blog/templates/creditTemp/silver.html
@@ -12,6 +12,8 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+    <script src="https://js.stripe.com/v3/"></script>
     <!------ Include the above in your HEAD tag ---------->
     <style>
 body
@@ -122,98 +124,49 @@ body
     text-align: center;
 }
     </style>
+
+    <style>
+	.StripeElement {
+	box-sizing: border-box;
+
+	<h3>Index.html</h3>
+
+	height: 40px;
+
+	padding: 10px 12px;
+
+	border: 1px solid transparent;
+	border-radius: 4px;
+	background-color: white;
+
+	box-shadow: 0 1px 3px 0 #e6ebf1;
+	-webkit-transition: box-shadow 150ms ease;
+	transition: box-shadow 150ms ease;
+	}
+
+	.StripeElement--focus {
+	box-shadow: 0 1px 3px 0 #cfd7df;
+	}
+
+	.StripeElement--invalid {
+	border-color: #fa755a;
+	}
+
+	.StripeElement--webkit-autofill {
+	background-color: #fefde5 !important;
+	}
+</style>
+
+
 </head>
 
 <body>
 
 
 <div class="container">
-    <br><br>
-    {% if request.user.is_authenticated %}
-    {% else %}
-        <div class="col-md-12">
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    FREE</h3>
-            </div>
-
-            <div class="panel-body">
-                <div class="the-price">
-                    <h1>
-                        $0<span class="subscript"></span></h1>
-                </div>
-                <table class="table">
-
-                    <tr class="active">
-                        <td>
-                            20 points
-                        </td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="panel-footer">
-                <a href="{% url 'register' %}" class="btn btn-success" role="button">Sign Up</a></div>
-        </div>
-    </div>
-    {% endif %}
 
     <div class="row">
-
-            <div class="col-xs-12 col-md-3">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                            Bronze</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div class="the-price">
-                            <h1>
-                                $10
-                            </h1>
-
-                        </div>
-                        <table class="table">
-                            <tr>
-                                <td>
-                                    100 Points
-                                </td>
-                            </tr>
-                            <tr class="active">
-                                <td>
-                                    1 Project
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    100K API Access
-                                </td>
-                            </tr>
-                            <tr class="active">
-                                <td>
-                                    100MB Storage
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Custom Cloud Services
-                                </td>
-                            </tr>
-                            <tr class="active">
-                                <td>
-                                    Weekly Reports
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="panel-footer">
-                        <a type="submit" class="btn btn-success" href="{% url 'CPointsPlans' 'Bronze' %}" name="btnBronze">Buy</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-12 col-md-3">
+                <div class="col-xs-12 col-md-3">
                 <div class="panel panel-success">
                     <div class="cnrflash">
                         <div class="cnrflash-inner">
@@ -229,8 +182,7 @@ body
                     <div class="panel-body">
                         <div class="the-price">
                             <h1>
-                                $20
-                            </h1>
+                                $20<span class="subscript">/mo</span></h1>
                         </div>
                         <table class="table">
                             <tr>
@@ -265,65 +217,109 @@ body
                             </tr>
                         </table>
                     </div>
-                    <div class="panel-footer">
-                        <a type="submit" href="{% url 'CPointsPlans' 'Silver' %}" class="btn btn-success" name="btnSilver">Buy</a>
-                    </div>
                 </div>
             </div>
+    </div>
 
-            <div class="col-xs-12 col-md-3">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Gold</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="the-price">
-                        <h1>
-                            $35
-                        </h1>
-                    </div>
-                    <table class="table">
-                        <tr>
-                            <td>
-                                500 Points
-                            </td>
-                        </tr>
-                        <tr class="active">
-                            <td>
-                                20 Project
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                300K API Access
-                            </td>
-                        </tr>
-                        <tr class="active">
-                            <td>
-                                500MB Storage
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Custom Cloud Services
-                            </td>
-                        </tr>
-                        <tr class="active">
-                            <td>
-                                Weekly Reports
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+    <form method='POST' id="payment-form" action="{% url 'SilverPlan' %}">
+        {% csrf_token %}
 
-                <div class="panel-footer">
-                    <a type="submit" href="{% url 'CPointsPlans' 'Gold' %}" class="btn btn-success" name="btnGold">Buy</a>
-                </div>
-            </div>
+        <input type="hidden" value="20" name="amount" id="amount">
+
+        <input required type="text" name="email" placeholder="Email">
+        <input required type="text" name="nickname" placeholder="nickname">
+
+
+        <label for="card-element"><br>
+        Credit or debit card
+        </label>
+        <div id="card-element">
+        <!-- A Stripe Element will be inserted here. -->
         </div>
-    </div>
+
+        <!-- Used to display form errors. -->
+        <div id="card-errors" role="alert"></div>
+
+        <div class="form-group">
+            <button class="btn btn-primary" value="Submit Payment" type="submit">Buy</button>
+        </div>
+
+    </form>
 
     </div>
+
+<script>
+
+// Create a Stripe client.
+var stripe = Stripe('pk_test_6NTdZNygDqQI3VAmrajQKqc700raAXo38d');
+
+// Create an instance of Elements.
+var elements = stripe.elements();
+
+// Custom styling can be passed to options when creating an Element.
+// (Note that this demo uses a wider set of styles than the guide below.)
+var style = {
+  base: {
+    color: '#32325d',
+    fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+    fontSmoothing: 'antialiased',
+    fontSize: '16px',
+    '::placeholder': {
+      color: '#aab7c4'
+    }
+  },
+  invalid: {
+    color: '#fa755a',
+    iconColor: '#fa755a'
+  }
+};
+
+// Create an instance of the card Element.
+var card = elements.create('card', {style: style});
+
+// Add an instance of the card Element into the `card-element` <div>.
+card.mount('#card-element');
+
+// Handle real-time validation errors from the card Element.
+card.on('change', function(event) {
+  var displayError = document.getElementById('card-errors');
+  if (event.error) {
+    displayError.textContent = event.error.message;
+  } else {
+    displayError.textContent = '';
+  }
+});
+
+// Handle form submission.
+var form = document.getElementById('payment-form');
+form.addEventListener('submit', function(event) {
+  event.preventDefault();
+
+  stripe.createToken(card).then(function(result) {
+    if (result.error) {
+      // Inform the user if there was an error.
+      var errorElement = document.getElementById('card-errors');
+      errorElement.textContent = result.error.message;
+    } else {
+      // Send the token to your server.
+      stripeTokenHandler(result.token);
+    }
+  });
+});
+
+// Submit the form with the token ID.
+function stripeTokenHandler(token) {
+  // Insert the token ID into the form so it gets submitted to the server
+  var form = document.getElementById('payment-form');
+  var hiddenInput = document.createElement('input');
+  hiddenInput.setAttribute('type', 'hidden');
+  hiddenInput.setAttribute('name', 'stripeToken');
+  hiddenInput.setAttribute('value', token.id);
+  form.appendChild(hiddenInput);
+
+  // Submit the form
+  form.submit();
+}
+  </script>
 
 </body>
